--- a/Code/home/home.css
+++ b/Code/home/home.css
@@ -285,14 +285,15 @@
     display: flex;
     font-size: 12px;
     height: 29.42%;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 8px;
+    padding-right: 5px;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     line-height: 17px;
 }
 
 .kiri2{
     width: 89.4%;
+    /* font-size: 12px; */
 }
 
 .kanan2{
