--- a/Code/header/header.css
+++ b/Code/header/header.css
@@ -6,6 +6,8 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+    color: inherit;
+    text-decoration: inherit;
 }
 
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
@@ -37,6 +39,7 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
 /* reset */
 
 /* body */
