--- a/Code/addStok/addStok.css
+++ b/Code/addStok/addStok.css
@@ -1,21 +1,33 @@
 .addPhoto{
     box-sizing: border-box;
-    /* border: 2px solid white; */
-    background-color: pink;
-    /* display: none; */
+    /* background-color: pink; */
     width: 100%;
     height: 381px;
 
 }
 
+input[type='file'] {
+    color: rgba(0, 0, 0, 0)
+}
+
 input[type=file]::file-selector-button{
-    /* visibility: hidden; */
+    visibility: hidden;
     /* color: transparent; */
     /* background-color: pink; */
 }
 
 input[type=file]::-webkit-file-upload-button{
-    /* visibility: hidden; */
+    visibility: hidden;
     /* color: transparent; */
     /* background-color: pink; */
+}
+
+.fileLabel{
+    display: flex;
+    justify-content: center;
+    font-size: 150px;
+    align-content:center;
+    /* background-color: pink; */
+    height: 381px;
+    align-items: center;
 }
