--- a/Code/editProduk/editProduk.css
+++ b/Code/editProduk/editProduk.css
@@ -34,24 +34,39 @@
 
 .bawahProduk{
     margin-top: 35px;
-    /* background-color: coral; */
-    /* height: 500px;    */
     display: flex;
     padding-left: 20px;
-    /* padding-right: 20px; */
     margin-bottom: 80px;
 }
 
 .deskripsiKiri{
-    width: 73.55%;
-    /* height: 500px; */
-    /* background-color: darkcyan; */
+    width: 65%;
+    /* background-color: salmon; */
+}
+
+.kotakSampah{
+    /* background-color: pink; */
+    width: 5%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.kotakSampah:hover{
+    cursor: pointer;
+}
+
+.kotakSampah>svg{
+    width: 100%;
+    height: 100%;
 }
 
 .deskripsiKanan{
-    width: 26.45%;
-    /* height: 500px; */
-    /* background-color: indigo; */
+    width: 25%;
+    /* background-color: red; */
+    display: flex;
+    justify-content: right;
 }
 
 .namaProduk{
@@ -120,6 +135,10 @@
     padding: 10px;
 }
 
+.qtyPerPcs{
+    margin-bottom: 7px;
+}
+
 .nama{
     margin-bottom: 7px;
 }
@@ -129,7 +148,25 @@
 }
 
 .stok{
-    margin-bottom: 30px;
+    margin-bottom: 10px;
+}
+
+.kategoriProduk{
+    margin-bottom: 20px;
+}
+
+.optionKategori{
+    background-color: #BDC0AC;
+    padding: 12px;
+    font-family: 'Montserrat';
+    color: white;
+    width: 200px;
+    outline: none;
+    margin-top: 5px;
+}
+
+.optionKategori:focus{
+    outline: none;
 }
 
 .tulisanDeskripsi{
@@ -146,7 +183,6 @@
     line-height: 15px;
     display: flex;
     align-items: center;
-    /* width: 93.44%; */
 }
 
 .tulisanKeranjang{
