--- a/Code/editProduk/editProduk.css
+++ b/Code/editProduk/editProduk.css
@@ -65,8 +65,8 @@
 .deskripsiKanan{
     width: 25%;
     /* background-color: red; */
-    display: flex;
     justify-content: right;
+    display: flex;
 }
 
 .namaProduk{
@@ -199,4 +199,8 @@
     text-align: center;
     letter-spacing: 1.2px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.tulisanKeranjang:hover{
+    cursor: pointer;
 }
