--- a/Code/produk/produk.css
+++ b/Code/produk/produk.css
@@ -238,6 +238,10 @@
     letter-spacing: 1.2px;
 }
 
+.tulisanKeranjang:hover{
+    cursor: pointer;
+}
+
 .beliSekarang{
     height: 40px;
     margin-top: 13px;
