--- a/Code/addStok/addStok.css
+++ b/Code/addStok/addStok.css
@@ -26,3 +26,7 @@ input[type=file]::-webkit-file-upload-button{
     height: 381px;
     align-items: center;
 }
+
+.isiEdit:active{
+    border-bottom: 1px solid white;
+}
