--- a/Code/kasir/kasir.css
+++ b/Code/kasir/kasir.css
@@ -45,7 +45,7 @@
 }
 
 .kotakKanan{
-    background-color: aquamarine;
+    /* background-color: aquamarine; */
     /* height: 1000px; */
     width: 26.62%;
 }
@@ -87,11 +87,12 @@
 }
 
 .bagianKanan{
-    background-color: rebeccapurple;
+    /* background-color: rebeccapurple; */
     width: 74.48%;
     /* height: 500px; */
     display: flex;
     flex-wrap: wrap;
+    align-content: flex-start;
 }
 
 .kategoriCard{
@@ -147,3 +148,57 @@
 .harga{
     text-decoration: underline;
 }
+
+.bagianAtas{
+    width: 100%;
+    height: 37px;
+    background-color: #BDC0AC;
+    text-shadow: 0px 4px 7px rgba(0, 0, 0, 0.25);
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.bagianBawah{
+    background-color: #604E49;
+    width: 100%;
+}
+
+.pesanan{
+    background-color: aquamarine;
+    width: 76.71%;
+    height: 300px;
+    margin: auto;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.cardPesanan{
+    background-color: brown;
+    height: 45px;
+}
+
+.atas{
+    display: flex;
+    justify-content: space-between;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 15px;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.bawah{
+    /* background-color: pink; */
+    margin-top: 5px;
+}
+
+.svgSampah{
+    background-color: paleturquoise;
+    width: 30px;
+    display: flex;
+    align-items: center;
+}
+
