--- a/Code/kasir/kasir.css
+++ b/Code/kasir/kasir.css
@@ -63,6 +63,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
 
 .tulisanCari{
@@ -71,7 +72,32 @@
     line-height: 20px;
     display: flex;
     align-items: center;
+    border-top-style: hidden;
+    border-right-style: hidden;
+    border-left-style: hidden;
+    border-bottom-style: hidden;
+    background-color: #604E49;
+    color: white;
+    /* height: 45px; */
+    font-family: inherit;
+    width: 100%;
 }
+
+input{
+    border: none;
+    outline:none;
+}
+
+input:active{
+    border: none;
+    outline:none;
+}
+
+::placeholder {
+    color: white;
+    opacity: 1;
+}
+
 
 .kotakKiriBawah{
     width: 100%;
@@ -165,40 +191,160 @@
 .bagianBawah{
     background-color: #604E49;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 25px;
 }
 
 .pesanan{
-    background-color: aquamarine;
+    /* background-color: aquamarine; */
     width: 76.71%;
-    height: 300px;
+    /* height: 300px; */
     margin: auto;
     padding-top: 20px;
-    padding-bottom: 20px;
+    padding-bottom: 8px;
 }
 
 .cardPesanan{
-    background-color: brown;
+    /* background-color: brown; */
     height: 45px;
+    margin-bottom: 15px;
 }
 
 .atas{
     display: flex;
     justify-content: space-between;
     font-weight: 500;
-    font-size: 12px;
+    font-size: 11px;
     line-height: 15px;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .bawah{
     /* background-color: pink; */
-    margin-top: 5px;
+    margin-top: 8px;
+    display: flex;
+    align-items: center;
 }
 
 .svgSampah{
-    background-color: paleturquoise;
+    /* background-color: yellow; */
     width: 30px;
     display: flex;
     align-items: center;
+    cursor: pointer;
+}
+
+.kotakJumlah{
+    width: 70px;
+    /* background-color: tan; */
+    height: 100%;
+    /* height: 30px; */
+}
+
+/* kotak plus min */
+
+.kotakJumlah{
+    display: flex;
+    align-items: center;
+    font-size: 10px;
+}
+
+.kotakMin{
+    border: 1px solid #E4E4E4;
+    height: 18px;
+    width: 33.333%; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 22px;
+}
+
+.kotakMin:hover, .kotakTambah:hover{
+    cursor: pointer;
+}
+
+.kotakAngka{
+    height: 18px;
+    width: 33.333%;
+}
+
+.kotakTambah{
+    border: 1px solid #E4E4E4;
+    height: 18px;
+    width: 33.333%; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 22px;
+}
+
+.inputText {
+    border-top-style: hidden;
+    border-right-style: hidden;
+    border-left-style: hidden;
+    border-bottom-style: hidden;
+    background-color: #604E49;
+    color: white;
+    font-family: inherit;
+    width: 100%;
+    height: 18px;
+    outline: none;
+    text-align: center;
+    border-bottom: 1px solid white;
+    border-top: 1px solid white;
+    font-size: 10px;
+}
+
+.inputText:focus {
+    border-bottom: 1px solid white;
+    border-top: 1px solid white;
+}
+
+/* kotak plus min */
+
+.garis3{
+    background-color: white;
+    height: 1px;
+    width: 76.71%;
+    margin: auto;
+}
+
+.total{
+    width: 76.71%;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    margin-top: 20px;
+    margin-bottom: 15px;
+}
+
+.harga2{
+    font-size: 12px;
+}
+
+.tombolBayar{
+    width: 76.71%;
+    margin: auto;
+    height: 30px;
+    background: #BDC0AC;
+    box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.25); 
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    letter-spacing: 1.2px;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
 }
 
