--- a/Code/kasir/kasir.css
+++ b/Code/kasir/kasir.css
@@ -344,5 +344,76 @@ input:active{
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    border: 0;
+    color: white;
 }
 
+.bg{
+    background-color: rgba(0, 0, 0, 0.75);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: 2;
+    visibility: hidden;
+    margin-top: -20px;
+}
+
+.popUp{
+    visibility: hidden;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    z-index: 3;
+    width: 500px;
+    height: 300px;
+    background-color: #BDC0AC;
+    box-shadow: 8px 8px 14px rgba(0, 0, 0, 0.25);
+}
+
+.isiDalam{
+    width: 25%;
+    /* background-color: pink; */
+    height: 100%;
+    margin: auto;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+.berhasil{
+    font-weight: 1000;
+    font-size: 20px;
+    line-height: 29px;
+}
+
+.svgBerhasil{
+    /* background-color: yellow; */
+    margin-top: 20px;
+    margin-bottom: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.kembali{
+    background-color: #8C8E81;
+    border: 0;
+    width: 100%;
+    height: 40px;
+    color: white;
+    font: inherit;
+    font-weight: 700;
+    font-size: 10px;
+    line-height: 15px;
+    cursor: pointer;
+    letter-spacing: .5px;
+}
+
+.open-popUp{
+    visibility: visible;
+}
+
+.open-bg{
+    visibility: visible;
+}
