--- a/Code/bljr/bljr3.css
+++ b/Code/bljr/bljr3.css
@@ -9,6 +9,11 @@ body{
     margin-left: 60px;
 }
 
+.centangKosong{
+    position: absolute;
+    margin-left: 60px;
+}
+
 .edit{
     background-color: black;
     width: 50px;
@@ -18,6 +23,10 @@ body{
 
 .displayNone{
     display: none;
+}
+
+.display{
+    display: contents;
 }
 
 .sampah{
