--- a/Code/bljr/bljr3.css
+++ b/Code/bljr/bljr3.css
@@ -33,3 +33,15 @@ body{
     position: absolute;
     background-color: blue;
 }
+
+form {
+    width: 50%;
+  }
+  
+  .hide {
+    display: none;
+  }
+  
+  .show {
+    display: block;
+  }
