--- a/Code/laporanKeuangan/laporanKeuangan.css
+++ b/Code/laporanKeuangan/laporanKeuangan.css
@@ -25,17 +25,17 @@
 }
 
 .kotakJudul{
-    width: 41.51%;
-    /* background-color: pink; */
-    height: 45px;
+    width: 100%;
+    height: 55px;
     display: flex;
+    align-items: flex-end;
 }
 
 .cardJudul{
     background-color: #604E49;
     border: 1px solid #FFFFFF;
-    width: 33.33%;
-    height: 100%;
+    width: 130px;
+    height: 45px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -220,4 +220,8 @@ input#session-month::-webkit-calendar-picker-indicator{
     font-size: 14px;
     line-height: 18px;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.active{
+    height: 55px;
 }
