--- a/Code/laporanKeuangan/laporanKeuangan.css
+++ b/Code/laporanKeuangan/laporanKeuangan.css
@@ -161,6 +161,38 @@ input#session-month::-webkit-calendar-picker-indicator{
 
 /* selesai */
 
+.bantuan10{
+    /* background-color: pink; */
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+    margin-bottom: 35px;
+}
+
+.tombolLihat{
+    display: flex;
+    justify-content: center;
+    background-color: #D2C2B0;
+    box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.25);
+    width: 14%;
+    height: 35px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.tulisanLihat{
+    font-weight: 700;
+    font-size: 11px;
+    line-height: 12px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 1.2px;
+    text-decoration-line: underline;
+    text-shadow: 2px 1px 3px rgba(0, 0, 0, 0.25);
+}
+
 .kategori{
     width: 90%;
     /* height: 200px; */
