--- a/Code/gudang/gudang.css
+++ b/Code/gudang/gudang.css
@@ -249,3 +249,58 @@ button{
 .centang, .centangKosong, .sampah, .edit{
     cursor: pointer;
 }
+
+input[type=text].nama{
+    all: unset;
+    font-weight: 500;
+    font-size: 10px;
+    line-height: 12px;
+    letter-spacing: -0.01em;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    /* background-color: pink; */
+    text-align: center;
+}
+
+.bagian .nama.displayNone{
+    display: none;
+}
+
+.stokAwal{
+    text-decoration: underline;
+}
+
+input[type=text].stok2{
+    all: unset;
+    font-weight: 500;
+    font-size: 10px;
+    line-height: 12px;
+    letter-spacing: -0.01em;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    /* background-color: pink; */
+    text-align: center;
+    text-decoration: underline;
+}
+
+.bagian .stok2.displayNone{
+    display: none;
+}
+
+.hargaAwal{
+    text-decoration: underline;
+}
+
+input[type=text].harga2{
+    all: unset;
+    font-weight: 500;
+    font-size: 10px;
+    line-height: 12px;
+    letter-spacing: -0.01em;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    /* background-color: pink; */
+    text-align: center;
+    text-decoration: underline;
+}
+
+.bagian .harga2.displayNone{
+    display: none;
+}
