--- a/Code/checkout/checkout.css
+++ b/Code/checkout/checkout.css
@@ -218,6 +218,11 @@
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+.pembayaran .harga.tulisan2{
+    /* background-color: pink; */
+    cursor: pointer;
+}
+
 .pembayaran{
     /* background-color: pink; */
     height: 35px;
