--- a/Code/bljr/bljr3.css
+++ b/Code/bljr/bljr3.css
@@ -50,17 +50,90 @@ body{
     all: unset;
   }
 
-  .satu{
-      margin-top: 50px;
-      position: absolute;
-  }
+.satu{
+    margin-top: 50px;
+    position: absolute;
+}
 
-  .nama::placeholder{
-    /* background-color: aquamarine; */
-    /* border: 1px solid black; */
-    color: black;
-  }
+.nama::placeholder{
+  /* background-color: aquamarine; */
+  /* border: 1px solid black; */
+  color: black;
+}
 
-  .nama{
-    background-color: pink;
-  }
+.nama{
+  background-color: pink;
+}
+
+
+.main{
+  width: 1035px;
+  height: 302px;
+  background-color: #D2C2B0;
+  margin: auto;
+  /* margin-top: 100px; */
+}
+
+.main2{
+  width: 1035px;
+  height: 302px;
+  background-color: rgba(0, 0, 0, 0.28);
+  /* margin: auto; */
+  /* margin-top: 100px; */
+  position: absolute;
+  /* display: flex; */
+  /* justify-content: center; */
+}
+
+.svgBg{
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+
+/* .main:hover{
+  background-color: #604E49;
+  background-color: pink;
+}
+
+.svgBg:hover{
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  display: none;
+} */
+
+.svgBg2{
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+
+.kotak{
+  width: 1035px;
+  height: 302px;
+  /* background-color: pink; */
+  margin: auto;
+}
+
+.kotak1{
+  height: 100%;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+
+.kotak2{
+  height: 100%;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
