--- a/Code/buildYourWarung/buildYourWarung.css
+++ b/Code/buildYourWarung/buildYourWarung.css
@@ -1,9 +1,9 @@
 .main{
     width: 68.45%;
-    height: 2000px;
+    /* height: 2000px; */
     /* background-color: pink; */
     margin: auto;
-    margin-top: 60px;
+    margin-top: 55px;
 }
 
 .judul{
@@ -11,6 +11,7 @@
     text-align: center;
     margin: auto;
     /* background-color: yellow; */
+    margin-bottom: 25px;
 }
 
 .tulisanJudul{
@@ -31,4 +32,207 @@
     font-weight: 200;
     font-size: 16px;
     line-height: 22px;
+}
+
+.subJudul{
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 29px;
+}
+
+.garis11{
+    height: 1px;
+    width: 240px;
+    background-color: white;
+}
+
+.cardPaket{
+    /* background-color: aquamarine; */
+    /* height: 2000px; */
+    margin-top: 20px;
+}
+
+.cardPaket1{
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    width: 100%;
+    height: 255.5px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    display: flex;
+}
+
+.kiri1{
+    width: 32.85%;
+    height: 100%;
+    /* background-color: yellow; */
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+}
+
+.tengah1{
+    width: 34.3%;
+    height: 100%;
+    /* background-color: red; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.kanan1{
+    width: 32.85%;
+    height: 100%;
+    /* background-color: yellow; */
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+}
+
+.judulCard1{
+    font-weight: 900;
+    font-size: 26px;
+    line-height: 37px;
+    text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+    margin-bottom: 15px;
+}
+
+.deskripsiCard1{
+    width: 78.2%;
+    font-weight: 600;
+    font-size: 17px;
+    line-height: 24px;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    margin-bottom: 30px;
+}
+
+.beliCard1{
+    cursor: pointer;
+    text-decoration: underline;
+    font-weight: 600;
+    font-size: 21.5px;
+    line-height: 28px;
+    text-shadow: 3px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.cardPaket2{
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    width: 100%;
+    height: 255.5px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    display: flex;
+}
+
+.kiri2{
+    width: 32.85%;
+    height: 100%;
+    /* background-color: yellow; */
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+}
+
+.tengah2{
+    width: 34.3%;
+    height: 100%;
+    /* background-color: red; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.judulCard2{
+    font-weight: 900;
+    font-size: 26px;
+    line-height: 37px;
+    text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+    margin-top: 20px;
+    margin-bottom: 15px;
+}
+
+.deskripsiCard2{
+    /* width: 78.2%; */
+    font-weight: 500;
+    font-size: 11px;
+    line-height: 14px;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    margin-bottom: 30px;
+    display: flex;
+    flex-direction: row;
+    /* background-color: yellow; */
+}
+
+.deskripsiKiriCard2{
+    /* width: 47%; */
+    text-align: right;
+    margin-right: 7px;
+}
+
+.deskripsiKananCard2{
+    /* width: 53%; */
+    text-align: left;
+    margin-left: 7px;
+}
+
+
+.kanan2{
+    width: 32.85%;
+    height: 100%;
+    /* background-color: yellow; */
+    padding-top: 35px;
+    padding-bottom: 35px;
+    display: flex;
+}
+
+.garis12{
+    width: 2px;
+    /* height: 100px; */
+    height: 100%;
+    background-color: white;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+.bagKanan{
+    display: flex;
+    flex-direction: column;
+    /* background-color: aqua; */
+    width: 100%;
+}
+
+.harga10{
+    font-weight: 600;
+    font-size: 26px;
+    line-height: 37px;
+    text-decoration-line: underline;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    /* background-color: yellow; */
+}
+
+.beliCard2{
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 12px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 1.2px;
+    background-color: #BDC0AC;
+    width: fit-content;
+    height: fit-content;
+    padding: 12px 24px;
+    margin-top: 12px;
+    cursor: pointer;
+}
+
+.paket .cardPaket1.displayNone{
+    display: none;
+}
+
+.paket .cardPaket2.displayNone{
+    display: none;
 }
