--- a/Code/buildYourWarung/buildYourWarung.css
+++ b/Code/buildYourWarung/buildYourWarung.css
@@ -34,6 +34,10 @@
     line-height: 22px;
 }
 
+.sub{
+    margin-left: 30px;
+}
+
 .subJudul{
     font-weight: 500;
     font-size: 20px;
@@ -236,3 +240,193 @@
 .paket .cardPaket2.displayNone{
     display: none;
 }
+
+.sub2{
+    /* background-color: pink; */
+    margin-top: 50px;
+    margin-left: 30px;
+}
+
+.subJudul2{
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 29px;
+}
+
+.garis13{
+    height: 1px;
+    width: 65px;
+    background-color: white;
+}
+
+.kategoriBundle{
+    /* background-color: pink; */
+    width: 100%;
+    /* height: 2000px; */
+    margin-top: 20px;
+}
+
+.cardBundle{
+    height: 205.5px;
+    width: 100%;
+    /* background-color: aquamarine; */
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+}
+
+.kiriBundle{
+    width: 23.8%;
+    height: 100%;
+    /* background-color: yellow; */
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+}
+
+.isiKiriBundle{
+    width: 100%;
+    height: 100%;
+    /* background-color: yellow; */
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+}
+
+.tengahBundle{
+    width: 55.62%;
+    height: 100%;
+    /* background-color: yellow; */
+    margin-left: 30px;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+}
+
+.kananBundle{
+    width: 20.58%;
+    height: 100%;
+    /* background-color: red; */
+}
+
+.judulBundle{
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 24px;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    margin-bottom: 5px;
+    margin-top: 3px;
+}
+
+.deskripsiBundle{
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 18px;
+    text-decoration: underline;
+    margin-bottom: 10px;
+}
+
+.isiBundle{
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 15px;
+}
+
+.harga11{
+    font-weight: 600;
+    font-size: 26px;
+    line-height: 37px;
+    text-decoration-line: underline;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    /* background-color: yellow; */
+}
+
+.beliCard3{
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 12px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 1.2px;
+    background-color: #BDC0AC;
+    width: fit-content;
+    height: fit-content;
+    padding: 12px 24px;
+    margin-top: 7px;
+    cursor: pointer;
+}
+
+.kotakJumlah{
+    margin-top: 10px;
+    /* width: 167px; */
+    width: 97.05%;
+    /* background-color: tan; */
+    /* height: 100%; */
+    height: 32px;
+}
+
+/* kotak plus min */
+
+.kotakJumlah{
+    display: flex;
+    align-items: center;
+    font-size: 10px;
+}
+
+.kotakMin{
+    border: 1px solid #E4E4E4;
+    height: 32px;
+    width: 33.333%; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 22px;
+}
+
+.kotakMin:hover, .kotakTambah:hover{
+    cursor: pointer;
+}
+
+.kotakAngka{
+    height: 32px;
+    width: 33.333%;
+}
+
+.kotakTambah{
+    border: 1px solid #E4E4E4;
+    height: 32px;
+    width: 33.333%; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 22px;
+}
+
+.inputText {
+    border-top-style: hidden;
+    border-right-style: hidden;
+    border-left-style: hidden;
+    border-bottom-style: hidden;
+    background-color: #8C8E81;
+    color: white;
+    font-family: inherit;
+    width: 100%;
+    height: 32px;
+    outline: none;
+    text-align: center;
+    border-bottom: 1px solid white;
+    border-top: 1px solid white;
+    font-size: 10px;
+}
+
+.inputText:focus {
+    border-bottom: 1px solid white;
+    border-top: 1px solid white;
+}
+
+/* kotak plus min */
