--- a/Code/checkoutBundle/checkoutBundle.css
+++ b/Code/checkoutBundle/checkoutBundle.css
@@ -414,13 +414,16 @@
 }
 
 .popUpBayar{
-    position: absolute;
+    position: fixed;
     background-color: rgba(0, 0, 0, 0.85);
     top: 0;
     margin: auto;
-    /* padding-top: 310px; */
-    padding-top: 50vh;
+    padding-top: 6vh;
     width: 100%;
-    height: 250vh;
+    height: 100%;
     z-index: 1;
+}
+
+.popUpBayar .main{
+    margin-top: 0px;
 }
