Interaktifitas Hover Halaman Home

--- a/Code/header/header.css
+++ b/Code/header/header.css
@@ -70,6 +70,10 @@ body{
     /* background-color: beige; */
 }
 
+.logo:hover{
+    transform: scale(1.02);
+}
+
 /* search */
 .search1{
     padding-top: 8px;
