--- a/Code/home/home.css
+++ b/Code/home/home.css
@@ -53,6 +53,10 @@
     transform: scale(1.05);
 }
 
+.cardFitur:active{
+    transform: scale(0.95);
+}
+
 .logoFitur{
     height: 100%;
     width: 42.9%;
@@ -100,6 +104,11 @@
 
 .cardKategori:hover{
     background-color: #604E49;
+    transform: scale(1.03);
+}
+
+.cardKategori:active{
+    transform: scale(0.97);
 }
 
 .cardKategori>a{
@@ -170,6 +179,7 @@
     background-color: #604E49;
     padding-top: 4px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    transition: 0.2s;
 }
 
 .gambarRekomendasi{
@@ -184,6 +194,10 @@
 
 .cardRekomendasi:hover, .cardLengkapi:hover{
     background-color: #362824;
+}
+
+.cardRekomendasi:active, .cardLengkapi:active{
+    transform: scale(0.97);
 }
 
 .cardRekomendasi:hover .gambarLengkapi,  .cardLengkapi:hover .gambarLengkapi{
