--- a/Code/signup/signup.css
+++ b/Code/signup/signup.css
@@ -79,6 +79,7 @@ input:active{
     padding: 5px;
     filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.5));
     font-family: inherit;
+    transition: 0.2s;
 }
 
 .wrapSubmit{
@@ -89,7 +90,17 @@ input:active{
 .buttonSubmit:focus{ 
     border: 1px solid white;
     outline: none;
-    background-color: red;
+    transform: scale(0.95);
+}
+
+.buttonSubmit:hover{
+    cursor: pointer;
+    background-color: #604E49;
+    transform: scale(1.1);
+}
+
+.buttonSubmit:active{
+    transform: scale(0.95);
 }
 
 .kataPenutup{
@@ -109,5 +120,5 @@ a{
 }
 
 a:hover{
-    color: red;
+    color:#604E49;
 }
