--- a/Code/kasir/kasir.css
+++ b/Code/kasir/kasir.css
@@ -125,6 +125,17 @@ input:active{
     height: 53px;
     display: flex;
     margin-bottom: 3px;
+    transition: 0.2s;
+}
+
+.kategoriCard:hover{
+    cursor: pointer;
+    background-color: #604E49;
+    transform: scale(1.03);
+}
+
+.kategoriCard:active{
+    transform: scale(0.95);
 }
 
 .kotakFoto{
@@ -151,6 +162,20 @@ input:active{
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     width: 25%;
     height: 110px;
+    transition: 0.2s;
+}
+
+.produkCard:hover{
+    cursor: pointer;
+    transform: scale(1.03);
+}
+
+.produkCard:active{
+    transform: scale(0.95);
+}
+
+.tombolJudul:active{
+    transform: scale(0.95);
 }
 
 .fotoProduk{
@@ -234,6 +259,18 @@ input:active{
     cursor: pointer;
 }
 
+.svgSampah:hover svg path{
+    cursor: pointer;
+    background-color: #604E49;
+    transform: scale(1.01);
+    fill:#E4E4E4;
+}
+
+.svgSampah:active{
+    transform: scale(0.95);
+}
+
+
 .kotakJumlah{
     width: 70px;
     /* background-color: tan; */
@@ -262,6 +299,21 @@ input:active{
 }
 
 .kotakMin:hover, .kotakTambah:hover{
+    cursor: pointer;
+    background-color: #BDC0AC;
+}
+
+.inputText:focus {
+    border:1.5px solid white;
+    background-color: none;
+}
+
+.inputText:focus:hover{
+    background-color: transparent;
+}
+
+.inputText:hover {
+    background-color: #BDC0AC;
     cursor: pointer;
 }
 
@@ -347,6 +399,15 @@ input:active{
     cursor: pointer;
     border: 0;
     color: white;
+}
+
+.tombolBayar:hover{
+    cursor: pointer;
+    transform: scale(1.05);
+}
+
+.tombolBayar:active{
+    transform: scale(0.95);
 }
 
 .bg{
