Responsive Design Home, Belum Footer

--- a/Code/footer/footer.css
+++ b/Code/footer/footer.css
@@ -2,25 +2,19 @@
     width: 65.6%;
     margin: auto;
     height: 100px;
-    /* background-color: aquamarine; */
 }
 
 .bagAtas{
     display: flex;
-    /* background-color: pink; */
 }
 
 .cariKami{
-    /* background-color: pink; */
     width: 60.98%;
-    /* height: 200px; */
     padding-top: 155px;
     padding-bottom: 50px;
 }
 
 .berlangganan{
-    /* background-color: blue; */
-    /* height: 200px; */
     width: 39.02%;
     padding-top: 97px;
     padding-bottom: 45px;
@@ -164,5 +158,11 @@ input:active{
     background-color: #BDC0AC;
 }
 
+@media only screen and (max-width: 392px) {
+    .footer{
+        width: 90%;
+        background-color: pink;
+    }
 
+}
 
