--- a/Code/home/home.css
+++ b/Code/home/home.css
@@ -345,3 +345,42 @@
 .harga{
     text-decoration: underline;
 }
+
+@media only screen and (max-width: 392px) {
+    .kotakFitur{
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    
+    .tulisanFitur2{
+        font-size: 14px;
+    }
+    
+    .cardFitur{
+        width: 50%;
+        filter: drop-shadow(0px 0px 2px rgba(0, 0, 0, 0.5));
+    }
+
+    .main{
+        width: 90%;
+    }
+
+    .kategori{
+        flex-direction: column;
+    }
+
+    .cardKategori{
+        width: 50%;
+    }
+
+    .cardRekomendasi{
+        width: 50%;
+        height: 40vw;
+    }
+
+    .cardLengkapi{
+        width: 45vw;
+        height: 45vw;
+    }
+
+}
