--- a/Code/home/home.css
+++ b/Code/home/home.css
@@ -230,12 +230,12 @@
 /* banner */
 .kotakBanner{
     width: 100%;
-    height: 258px;
-    margin-top: 25px;
+    height: 18vw;
+    margin-top: 6vw;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    filter: drop-shadow(0vw 0.2vw 0.2vw rgba(0, 0, 0, 0.25));
     display: flex;
 }
 
@@ -247,18 +247,23 @@
 .hyperlink{
     /* background-color: pink; */
     /* margin-top: 23%; */
-    margin-top: 200px;
+    margin-top: 14vw;
     display: flex;
-    text-shadow: 3px 4px 4px rgba(0, 0, 0, 0.25);
-    font-size: 22px;
+    text-shadow: 0.15vw 0.2vw 0.2vw rgba(0, 0, 0, 0.25);
+    font-size: 1.5vw;
     text-decoration: underline;
     font-weight: 600;
-    height: 25px;
+    height: 1.25vw;
 }
 
 .panah{
-    margin-left: 18px;
+    margin-left: 0.89vw;
+    background-size: 10px 10px;
 }
+
+./*panah svg path{
+    width: 5px;
+}*/
 
 .hyperlink p:hover, .panah:hover{
     cursor: pointer;
