--- a/Code/addStok/addStok.css
+++ b/Code/addStok/addStok.css
@@ -1,8 +1,18 @@
 .addPhoto{
     box-sizing: border-box;
-    /* background-color: pink; */
     width: 100%;
     height: 381px;
+    transition: 0.2s;
+}
+
+.gambarProduk:hover{
+    cursor: pointer;
+    transform: scale(1.03);
+    background-color: #BDC0AC;
+}
+
+.gambarProduk:active{
+    transform: scale(0.98);
 }
 
 input[type='file'] {
@@ -27,6 +37,34 @@ input[type=file]::-webkit-file-upload-button{
     align-items: center;
 }
 
-.isiEdit:active{
-    border-bottom: 1px solid white;
+.isiEdit:hover, #isiEdit2:hover, .isiEdit:hover{
+    cursor: pointer;
+}
+
+.isiEdit:focus{
+    border-bottom: 2px solid white;
+}
+
+#isiEdit2:focus{
+    border: 2px solid white;
+}
+
+.isiEdit:focus{
+    border-bottom: 2px solid white;
+}
+
+.tulisanKeranjang:hover{
+    cursor:pointer;
+    background-color: #BDC0AC;
+    transform: scale(1.1);
+}
+
+.tulisanKeranjang:active{
+    transform: scale(0.95);
+}
+
+.optionKategori:hover{
+    cursor: pointer;
+    background-color: #604E49;
+    transition: 0.2s;
 }
