--- a/Code/editProduk/editProduk.css
+++ b/Code/editProduk/editProduk.css
@@ -1,22 +1,14 @@
 .isiEdit2{
-    /* resize:vertical; */
     min-width: 600px;
     min-height: 650px;
     max-width: 600px;
     max-height: 650px;
     overflow: hidden;
-    
-    /* padding-left: 20px; */
 }
 
-/* .textArea:focus{
-    padding-left: 20px;
-} */
 
 .main{
     width: 50.26%;
-    /* height: 2000px; */
-    /* background-color: pink; */
     margin: auto;
     margin-top: 50px;
 }
@@ -201,6 +193,46 @@
     box-shadow: 0px 4px 2px rgba(0, 0, 0, 0.25);
 }
 
-.tulisanKeranjang:hover{
+.isiEdit:hover, #isiEdit2:hover, .isiEdit:hover{
     cursor: pointer;
+}
+
+.isiEdit:focus{
+    border-bottom: 2px solid white;
+}
+
+#isiEdit2:focus{
+    border: 2px solid white;
+}
+
+.isiEdit:focus{
+    border-bottom: 2px solid white;
+}
+
+.tulisanKeranjang:hover{
+    cursor:pointer;
+    background-color: #BDC0AC;
+    transform: scale(1.1);
+}
+
+.tulisanKeranjang:active{
+    transform: scale(0.95);
+}
+
+.kotakSampah:hover svg path{
+    fill: #604E49;
+    cursor: pointer;
+    transform: scale(1.05);
+    transition: 0.2s;
+}
+
+.kotakSampah:active{
+    transform: scale(0.95);
+    transition: 0.2s;
+}
+
+.optionKategori:hover{
+    cursor: pointer;
+    background-color: #604E49;
+    transition: 0.2s;
 }
