--- a/Code/home/home.css
+++ b/Code/home/home.css
@@ -48,6 +48,7 @@
 }
 
 .cardFitur:hover{
+    cursor: pointer;
     background-color: #604E49;
     transform: scale(1.05);
 }
@@ -255,11 +256,13 @@
 }
 
 .hyperlink:hover{
+    cursor: pointer;
     color: #BDC0AC;
     transform: scale(1.1);
 }
 
 .hyperlink:hover svg path{
+    cursor: pointer;
     fill: #BDC0AC;
     transform: scale(1.1);
 }
@@ -324,6 +327,7 @@
     padding-top: 4px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     margin-bottom: 22px;
+    transition: 0.2s;
 }
 
 .gambarLengkapi{
